<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@color/blako_green"
        android:gravity="center_vertical|start"
        android:paddingLeft="25dp"
        android:paddingStart="25dp"

        android:text="@string/blako_checkout_offer_payment"
        android:textColor="@color/blako_white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/checkoutClientTv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/blako_checkout_offer_payment_agregado"
        android:textColor="@color/blako_background"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/paymentTv"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:text="$ 0.00"
            android:textColor="@color/blako_background"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/payment" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/aceptBtn"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/blako_green"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:text="@string/blako_checkout_offer_payment_gracias"
            android:textAllCaps="false"
            android:textColor="@color/blako_white"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>