<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blako_white"
    android:orientation="vertical">






    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:background="@color/blako_white"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blako_white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/blako_white"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/blako_vehiculos_selecciona"
                android:textColor="@color/blako_background"
                android:textSize="18sp" />
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/activity_main_swipe_refresh_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="match_parent">
            <ListView
                android:id="@+id/servicesLv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"

                android:background="@color/blako_white"
                android:choiceMode="singleChoice"
                android:divider="#333333"
                android:dividerHeight="0dp" />

            </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/refreshIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/blako_image_description"
            android:src="@drawable/refresh"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noResultsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/blako_sin_resultados"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">



        <Button
            android:id="@+id/aceptBtn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/blako_background"
            android:text="CANCELAR"
            android:textAllCaps="false"
            android:textColor="@color/blako_white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>