<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blako_white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/messengerProfileIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:civ_border_color="@color/blako_background"
        app:civ_border_width="4dp" />

    <LinearLayout
        android:id="@+id/profileOptiosLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">


        <ImageButton
            android:id="@+id/deleteBt"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/x" />

        <ImageButton
            android:id="@+id/rotateBt"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/rotate" />

        <ImageButton
            android:id="@+id/saveBt"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/save" />
    </LinearLayout>

    <TextView
        android:id="@+id/nameWorkerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/blako_background"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/blako_white"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/blako_vehiculos_selecciona"
                android:textColor="@color/blako_background"
                android:textSize="18sp" />
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/activity_main_swipe_refresh_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="match_parent">
            <ListView
                android:id="@+id/servicesLv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"

                android:background="@color/blako_white"
                android:choiceMode="singleChoice"
                android:divider="#333333"
                android:dividerHeight="0dp" />

            </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>

        <ImageView
        android:id="@+id/refreshIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/blako_image_description"
        android:src="@drawable/refresh"
        android:visibility="gone" />

        <TextView
            android:id="@+id/noResultsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/blako_sin_resultados"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>